# music-minder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  index.html  run_win.ps1  test_startup.ps1
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/workflows/: build-release.yml  ci.yml  codeql.yml  release.yml
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  AUDIO_ARCHITECTURE_REVIEW.md  CODE_REVIEW.md  ENRICHMENT_UI_DESIGN.md  EXTREME_AUDIO_OPTIMIZATIONS.md  ROADMAP.md  STARTUP_OPTIMIZATION_PHASE_1.md  STATUS.md  TECH_OPTIONS.md  WINDOWS_SETUP.md
migrations/: 20250101000000_initial_schema.sql  20250101000001_file_health.sql  20250101000002_track_mtime.sql  20250101000003_track_quality.sql  20250101000004_alternative_matches.sql
scripts/: generate-icon.ps1  pre-commit  pre-commit.ps1  setup.ps1
scripts/hooks/: pre-commit
src/: config.rs  error.rs  main.rs  test_utils.rs
src/cli/: commands.rs  mod.rs
src/cli/commands/: enrich.rs  health.rs  mod.rs  organize.rs  scan.rs
src/cover/: cache.rs  embedded.rs  mod.rs  resolver.rs  sidecar.rs
src/db/: mod.rs
src/diagnostics/: audio.rs  cpu.rs  memory.rs  mod.rs  power.rs  report.rs  timer.rs
src/enrichment/: domain.rs  fingerprint.rs  mod.rs  service.rs  traits.rs
src/enrichment/acoustid/: adapter.rs  client.rs  dto.rs  mod.rs
src/enrichment/coverart/: client.rs  dto.rs  mod.rs
src/enrichment/musicbrainz/: adapter.rs  client.rs  dto.rs  mod.rs
src/health/: db.rs  gardener.rs  hash.rs  mod.rs  quality.rs  types.rs  verification.rs
src/metadata/: mod.rs
src/model/: mod.rs
src/organizer/: mod.rs
src/player/: audio.rs  decoder.rs  media_controls.rs  mod.rs  queue.rs  resampler.rs  simd.rs  state.rs  visualization.rs
src/scanner/: mod.rs  watcher.rs
src/ui/: canvas.rs  debug.rs  icons.rs  messages.rs  mod.rs  platform.rs  state.rs  streams.rs  theme.rs  update.rs  views.rs
src/ui/update/: db.rs  diagnostics.rs  enrichment.rs  keyboard.rs  mod.rs  organize.rs  player.rs  scan.rs  search.rs  selection.rs  track_detail.rs  watcher.rs
src/ui/views/: diagnostics_view.rs  helpers.rs  layout.rs  library.rs  loading.rs  mod.rs  player.rs  toast.rs  track_detail.rs
src/ui/views/enrich/: mod.rs  results.rs  selection.rs  status.rs
src/ui/views/settings/: about.rs  appearance.rs  audio.rs  enrichment.rs  library.rs  mod.rs
wix/: License.rtf  main.wxs
