[package]
name = "music-minder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
# Only include chrono features we actually use (Utc::now, to_rfc3339)
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "5.0"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio", "canvas"] }
lofty = "0.22.4"
rand = "0.9"                 # Random selection for shuffle
rayon = "1.10"               # Parallel iterators for file checks
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
rfd = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.13", features = ["serde"] }  # Stack-allocated small vecs
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
sha2 = "0.10"
thiserror = "2.0.17"
# Only the tokio features we actually need (rt, rt-multi-thread, sync, macros for tests, time for delays)
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
urlencoding = "2.1"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

# Audio playback and decoding
cpal = "0.15"                # Cross-platform audio output (WASAPI on Windows)
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "aac", "pcm"] }
# FFT for spectrum visualization
realfft = "3.3"              # Fast real-to-complex FFT
rustfft = "6.2"              # For Complex type
# Crossbeam for lock-free audio communication
crossbeam-channel = "0.5"    # Fast MPSC channels for audio thread
parking_lot = "0.12"         # Fast RwLock for shared state
async-trait = "0.1.89"

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3.23.0"

# ============================================================================
# Build Profiles - Optimize compile times and binary size
# ============================================================================

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize all dependencies in dev mode (they don't change often)
opt-level = 2

[profile.release]
# Balanced release: good optimization, reasonable compile time
opt-level = 3
lto = "thin"           # Thin LTO: good optimization, faster than "fat"
codegen-units = 1      # Single codegen unit for better optimization
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, no unwinding overhead

[profile.release-fast]
# Quick release builds for testing
inherits = "release"
lto = false
codegen-units = 16
strip = false
panic = "unwind"
