[package]
name = "music-minder"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
# Only include chrono features we actually use (Utc::now, to_rfc3339)
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "6.0"
futures = "0.3.31"
# Note: iced 0.14.0 (released Dec 7, 2025) has Windows build issues due to 
# windows crate version conflicts in wgpu-hal's dependency tree. Keeping 0.13.1 
# until upstream fixes are released. Track: https://github.com/iced-rs/iced/issues
iced = { version = "0.13.1", features = ["tokio", "canvas", "image"] }
lofty = "0.22.4"
rand = "0.9"                 # Random selection for shuffle
rayon = "1.10"               # Parallel iterators for file checks
reqwest = { version = "0.12.25", default-features = false, features = ["rustls-tls", "json", "gzip"] }
rfd = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.13", features = ["serde"] }  # Stack-allocated small vecs
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
sha2 = "0.10"
thiserror = "2.0.17"
# Only the tokio features we actually need (rt, rt-multi-thread, sync, macros for tests, time for delays)
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
urlencoding = "2.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

# Audio playback and decoding
cpal = "0.16"                # Cross-platform audio output (WASAPI on Windows)
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "aac", "pcm"] }
rubato = "0.16"              # High-quality audio resampling
souvlaki = "0.8"             # OS media controls (SMTC/MPRIS/MediaCenter)
# FFT for spectrum visualization
realfft = "3.3"              # Fast real-to-complex FFT
rustfft = "6.2"              # For Complex type
# Lock-free audio communication
rtrb = "0.3"                 # Lock-free ring buffer for real-time audio
crossbeam-channel = "0.5"    # Fast MPSC channels for commands
parking_lot = "0.12"         # Fast RwLock for UI state
async-trait = "0.1.89"

[target.'cfg(windows)'.dependencies]
# Note: windows-sys 0.61+ uses raw-dylib linking via windows-link crate.
# Updating from 0.52 for security/bug fixes. WNDCLASSEXW now requires Win32_Graphics_Gdi.
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_Graphics_Gdi"] }

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3.23.0"

# ============================================================================
# Build Profiles - Optimize compile times and binary size
# ============================================================================

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize all dependencies in dev mode (they don't change often)
opt-level = 2

[profile.release]
# Balanced release: good optimization, reasonable compile time
opt-level = 3
lto = "thin"           # Thin LTO: good optimization, faster than "fat"
codegen-units = 1      # Single codegen unit for better optimization
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, no unwinding overhead

[profile.release-fast]
# Quick release builds for testing
inherits = "release"
lto = false
codegen-units = 16
strip = false
panic = "unwind"

[profile.release-small]
# Smallest possible binary (slower to compile and run)
inherits = "release"
opt-level = "z"        # Optimize for size
lto = "fat"            # Full LTO for maximum size reduction
codegen-units = 1
strip = true
panic = "abort"
